[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scenes/GUI.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=3]
antialiased = false
font_path = "res://Fonts/rainyhearts.ttf"

[sub_resource type="DynamicFont" id=4]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.498039, 0.0901961, 0.0901961, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.901961, 0.901961, 0.901961, 0.109804 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
anti_aliasing = false

[sub_resource type="DynamicFontData" id=5]
antialiased = false
font_path = "res://Fonts/rainyhearts.ttf"

[sub_resource type="DynamicFont" id=6]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 5 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 0.956863, 0.658824, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.901961, 0.901961, 0.901961, 0.109804 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0.368627, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[node name="GUI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.972549, 0.52549, 0.52549, 1 )

[node name="HealthBar" type="ProgressBar" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -101.0
margin_top = 200.0
margin_right = 101.0
margin_bottom = 227.0
custom_colors/font_color = Color( 1, 0.968627, 0.835294, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 100.0
percent_visible = false

[node name="HealthBarText" type="Label" parent="HealthBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1

[node name="SolarBar" type="ProgressBar" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -101.0
margin_top = -25.0
margin_right = 101.0
margin_bottom = -10.0
custom_colors/font_color = Color( 1, 0.968627, 0.835294, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 8 )
value = 100.0
percent_visible = false

[node name="SolarBarText" type="Label" parent="SolarBar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1

[node name="XpBar" type="ProgressBar" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -101.0
margin_top = -45.0
margin_right = 101.0
margin_bottom = -30.0
custom_fonts/font = SubResource( 4 )
custom_styles/fg = SubResource( 9 )
custom_styles/bg = SubResource( 8 )
value = 100.0
percent_visible = false

[node name="XpBarText" type="Label" parent="XpBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 1.0
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1

[node name="LevelText" type="Label" parent="XpBar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 205.0
margin_right = 36.0
margin_bottom = 1.0
custom_fonts/font = SubResource( 6 )
text = "Level: 0"
valign = 1

[node name="Tween" type="Tween" parent="."]
